--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+
+	{% include "page_head/page_head.html.twig" with {'page_name': 'Register'} %}
+
 	<div class="main_content">
 		<div class="login_register_wrap section">
 			<div class="container">
@@ -27,14 +30,14 @@
 									<div class="chek-form">
 										{{ form_row(registrationForm.agreeTerms) }}
 										<!-- <div class="custome-checkbox">
-																				                                            <input type="checkbox" name="checkbox" id="exampleCheckbox2" value=""
-																				                                                class="form-check-input">
-																				                                            <label for="exampleCheckbox2" class="form-check-label">
-																				                                                <span>I agree to
-																				                                                    terms &amp; Policy.
-																				                                                </span>
-																				                                            </label>
-																				                                        </div> -->
+																																								                                            <input type="checkbox" name="checkbox" id="exampleCheckbox2" value=""
+																																								                                                class="form-check-input">
+																																								                                            <label for="exampleCheckbox2" class="form-check-label">
+																																								                                                <span>I agree to
+																																								                                                    terms &amp; Policy.
+																																								                                                </span>
+																																								                                            </label>
+																																								                                        </div> -->
 									</div>
 								</div>
 								<div class="form-group mb-3">
@@ -46,11 +49,11 @@
 										or</span>
 								</div>
 								<!-- <ul class="btn-login list_none text-center">
-																                                <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a>
-																                                </li>
-																                                <li><a href="#" class="btn btn-google"><i class="ion-social-googleplus"></i>Google</a>
-																                                </li>
-																                            </ul> -->
+																																                                <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a>
+																																                                </li>
+																																                                <li><a href="#" class="btn btn-google"><i class="ion-social-googleplus"></i>Google</a>
+																																                                </li>
+																																                            </ul> -->
 								<div class="form-note text-center">Already have an account?
 									<a href="/login">Log in</a>
 								</div>
