--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -42,7 +42,7 @@
 						<ul class="contact_detail text-center text-lg-start">
 							<li>
 								<i class="ti-mobile"></i>
-								<span>+33 7 49 31 69 74</span>
+								<span>+{{ app.session.get("setting").phone }}</span>
 							</li>
 						</ul>
 					</div>
@@ -101,7 +101,9 @@
 		<div class="container">
 			<nav class="navbar navbar-expand-lg">
 				<a routerlink="/" class="navbar-brand" ng-reflect-router-link="/" href="/">
-					<h2>Jstore</h2>
+					<h2>
+						{{ app.session.get("setting").websiteName }}
+					</h2>
 				</a>
 				<button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false" class="navbar-toggler collapsed">
 					<span class="ion-android-menu"></span>
@@ -133,13 +135,13 @@
 											<li class="dropdown-header">Robes</li>
 											<li>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,bikini-unicolore-cte" href="/product/bikini-unicolore-ctel-shop">Bikini unicolore
-																																																																																											                                                    côtelé</a>
+																																																																																																																																																																									                                                    côtelé</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,jupe-crayon-taille-h" href="/product/jupe-crayon-taille-haute-en-dentelle">Jupe crayon
-																																																																																											                                                    taille haute en dentelle</a>
+																																																																																																																																																																									                                                    taille haute en dentelle</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,jupe-imprim-floral-t" href="/product/jupe-imprim-floral-taille-fronce">Jupe à imprimé
-																																																																																											                                                    floral à taille froncée</a>
+																																																																																																																																																																									                                                    floral à taille froncée</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,robe-fines-brides-im" href="/product/robe-fines-brides-imprim-tropical-en-dentelle">Robe à
-																																																																																											                                                    fines brides à imprimé tropical en dentelle</a>
+																																																																																																																																																																									                                                    fines brides à imprimé tropical en dentelle</a>
 											</li>
 										</ul>
 									</li>
@@ -148,12 +150,12 @@
 											<li class="dropdown-header">Jupes</li>
 											<li>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,bikini-unicolore-cte" href="/product/bikini-unicolore-ctel-shop">Bikini unicolore
-																																																																																											                                                    côtelé</a>
+																																																																																																																																																																									                                                    côtelé</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,jupe-noire-brillante" href="/product/jupe-noire-brillante">Jupe noire brillante</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,jupe-fendue-taille-h" href="/product/jupe-fendue-taille-haute">Jupe fendue taille
-																																																																																											                                                    haute</a>
+																																																																																																																																																																									                                                    haute</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,jupe-imprim-floral-t" href="/product/jupe-imprim-floral-taille-fronce">Jupe à imprimé
-																																																																																											                                                    floral à taille froncée</a>
+																																																																																																																																																																									                                                    floral à taille froncée</a>
 											</li>
 										</ul>
 									</li>
@@ -163,12 +165,12 @@
 											</li>
 											<li>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,bikini-unicolore-cte" href="/product/bikini-unicolore-ctel-shop">Bikini unicolore
-																																																																																											                                                    côtelé</a>
+																																																																																																																																																																									                                                    côtelé</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,culotte-en-dentelle-" href="/product/culotte-en-dentelle-mudey">Culotte en dentelle</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,culotte-en-dentelle-" href="/product/culotte-en-dentelle-espero">Culotte en dentelle</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,culotte-en-dentelle" href="/product/culotte-en-dentelle">Culotte en dentelle</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,short-paillettes-bro" href="/product/short-paillettes-broderie-dchir">Short à paillettes à
-																																																																																											                                                    broderie déchiré</a>
+																																																																																																																																																																									                                                    broderie déchiré</a>
 											</li>
 										</ul>
 									</li>
@@ -177,13 +179,13 @@
 											<li class="dropdown-header">Pantalons</li>
 											<li>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,pantalon-taille-haut" href="/product/pantalon-taille-haute-carreaux-avec-zip">Pantalon
-																																																																																											                                                    taille haute à carreaux avec zip</a>
+																																																																																																																																																																									                                                    taille haute à carreaux avec zip</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,pantalon-carreaux-av" href="/product/pantalon-carreaux-avec-cordon-la-taille">Pantalon à
-																																																																																											                                                    carreaux avec cordon à la taille</a>
+																																																																																																																																																																									                                                    carreaux avec cordon à la taille</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,pantalon-taille-fron" href="/product/pantalon-taille-fronce-poches">Pantalon à taille
-																																																																																											                                                    froncée à poches</a>
+																																																																																																																																																																									                                                    froncée à poches</a>
 												<a class="dropdown-item nav-link nav_item" ng-reflect-router-link="/,product,pantalon-unicolore-t" href="/product/pantalon-unicolore-taille-haute">Pantalon unicolore
-																																																																																											                                                    taille haute</a>
+																																																																																																																																																																									                                                    taille haute</a>
 											</li>
 										</ul>
 									</li>
@@ -195,7 +197,7 @@
 												<h6>10% Off</h6>
 												<h4>New Arrival</h4>
 												<a href="http://localhost:4300/">Shop
-																																																																																											                                                    Now</a>
+																																																																																																																																																																									                                                    Now</a>
 											</div>
 										</div>
 									</div>
@@ -205,7 +207,7 @@
 												<h6>15% Off</h6>
 												<h4>Men's Fashion</h4>
 												<a href="http://localhost:4300/">Shop
-																																																																																											                                                    Now</a>
+																																																																																																																																																																									                                                    Now</a>
 											</div>
 										</div>
 									</div>
@@ -215,7 +217,7 @@
 												<h6>23% Off</h6>
 												<h4>Kids Fashion</h4>
 												<a href="http://localhost:4300/">Shop
-																																																																																											                                                    Now</a>
+																																																																																																																																																																									                                                    Now</a>
 											</div>
 										</div>
 									</div>
@@ -227,7 +229,7 @@
 						</li>
 						<li>
 							<a routerlink="/contact" class="nav-link nav_item" ng-reflect-router-link="/contact" href="/contact">Contact
-																																																								                                Us</a>
+																																																																																																								                                Us</a>
 						</li>
 					</ul>
 				</div>
@@ -284,7 +286,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_5/36851533762117856286455670026456984987161761684087224828.webp">Culotte
-																																																																						                                        en dentelle</a>
+																																																																																																																																		                                        en dentelle</a>
 									<span class="cart_quantity">
 										11 x
 										<span class="cart_amount">
@@ -297,7 +299,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_9/116945623386141314594418897879593148825527931684087225230.webp">Culotte
-																																																																						                                        unicolore (sans couture)</a>
+																																																																																																																																		                                        unicolore (sans couture)</a>
 									<span class="cart_quantity">
 										4 x
 										<span class="cart_amount">
@@ -310,7 +312,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_7/825380258783085919054835307976332473139779511684087224936.webp">Culotte
-																																																																						                                        en dentelle</a>
+																																																																																																																																		                                        en dentelle</a>
 									<span class="cart_quantity">
 										3 x
 										<span class="cart_amount">
@@ -323,10 +325,10 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/970670668041335927385290724653240714148366921684565574162.webp">Bikini
-																																																																						                                        unicolore côtelé</a>
+																																																																																																																																		                                        unicolore côtelé</a>
 									<span class="cart_quantity">
 										4
-																																																																						                                        x
+																																																																																																																																		                                        x
 										<span class="cart_amount">
 											<span class="price_symbole">28,24&nbsp;€</span>
 										</span>
@@ -337,7 +339,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_4/87087411019387380483560199609827534551691041684087224752.webp">Culotte
-																																																																						                                        unicolore femme (sans couture)</a>
+																																																																																																																																		                                        unicolore femme (sans couture)</a>
 									<span class="cart_quantity">
 										2 x
 										<span class="cart_amount">
@@ -350,7 +352,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_2/64690629656996101166169787112869964617448491684087224479.webp">Tanga
-																																																																						                                        unicolore</a>
+																																																																																																																																		                                        unicolore</a>
 									<span class="cart_quantity">
 										3 x
 										<span class="cart_amount">
@@ -363,7 +365,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_8/10518988473111520886581236853833613928085898971684087225041.webp">Culotte
-																																																																						                                        en dentelle</a>
+																																																																																																																																		                                        en dentelle</a>
 									<span class="cart_quantity">
 										1 x
 										<span class="cart_amount">
@@ -376,7 +378,7 @@
 										<i class="ion-close"></i>
 									</a>
 									<a href="#"><img width="50" height="50" alt="cart_thumb1" src="/assets/files/culottes/culotte_3/6138170893214881132536005127536132168491807951684087224669.webp">Culotte
-																																																																						                                        à blocs de couleurs en dentelle</a>
+																																																																																																																																		                                        à blocs de couleurs en dentelle</a>
 									<span class="cart_quantity">
 										3 x
 										<span class="cart_amount">
