--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -39,21 +39,23 @@
 					<div class="widget">
 						<h6 class="widget_title">Useful Links</h6>
 						<ul class="widget_links">
-							<li>
-								<a ng-reflect-router-link="/page,a-propos-de-nous-shop" href="/page/a-propos-de-nous-shop">A Propos de nous</a>
-							</li>
-							<li>
-								<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
-							</li>
-							<li>
-								<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
-							</li>
-							<li>
-								<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
-							</li>
-							<li>
-								<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
-							</li>
+							{% for page in app.session.get("footerPages") %}
+								<li>
+									<a href="/page/{{page.slug}}">{{ page.title }}</a>
+								</li>
+							{% endfor %}
+							{# <li>
+																																																																																																																																																																																																												<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
+																																																																																																																																																																																																											</li>
+																																																																																																																																																																																																											<li>
+																																																																																																																																																																																																												<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
+																																																																																																																																																																																																											</li>
+																																																																																																																																																																																																											<li>
+																																																																																																																																																																																																												<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
+																																																																																																																																																																																																											</li>
+																																																																																																																																																																																																											<li>
+																																																																																																																																																																																																												<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
+																																																																																																																																																																																																											</li> #}
 						</ul>
 					</div>
 				</div>
@@ -104,11 +106,15 @@
 						<ul class="contact_info contact_info_light">
 							<li>
 								<i class="ti-location-pin"></i>
-								<p>21 Rue Rubens 59800 Lille</p>
+								<p>
+									{{ app.session.get("setting").street }}
+									{{ app.session.get("setting").codePostal }}
+									{{ app.session.get("setting").city }}
+								</p>
 							</li>
 							<li>
 								<i class="ti-email"></i>
-								<a href="mailto:contact@jstore.fr">contact@jstore.fr</a>
+								<a href="mailto:francis.agneba@gmail.com">{{ app.session.get("setting").email }}</a>
 							</li>
 							<li>
 								<i class="ti-mobile"></i>
@@ -125,8 +131,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p class="mb-md-0 text-center text-md-start">
-						© 2023 All Rights
-																														                        Reserved by Espero-Soft Informatiques
+						{{ app.session.get("setting").copyright }}
 					</p>
 				</div>
 				<div class="col-md-6">
