--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1088,6 +1088,8 @@ button:focus:not(:focus-visible) {
 .dark_skin .cart_quantity,
 .dark_skin .cart_total {
 	color: #333333;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .dropdown-toggle::after, .dropdown-toggler::after {
 	border: 0 none;
