--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -5,7 +5,7 @@
 				<div class="col-lg-3 col-md-6 col-sm-12">
 					<div class="widget">
 						<div class="footer_logo">
-							<a href="#">
+							<a href="/">
 								<h2>{{ app.session.get("setting").websiteName }}</h2>
 							</a>
 						</div>
@@ -45,17 +45,17 @@
 								</li>
 							{% endfor %}
 							{# <li>
-																																																																																																																																																																																																												<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
-																																																																																																																																																																																																											</li>
-																																																																																																																																																																																																											<li>
-																																																																																																																																																																																																												<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
-																																																																																																																																																																																																											</li>
-																																																																																																																																																																																																											<li>
-																																																																																																																																																																																																												<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
-																																																																																																																																																																																																											</li>
-																																																																																																																																																																																																											<li>
-																																																																																																																																																																																																												<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
-																																																																																																																																																																																																											</li> #}
+																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
+																																																																																																																																																																																																																									</li>
+																																																																																																																																																																																																																									<li>
+																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
+																																																																																																																																																																																																																									</li>
+																																																																																																																																																																																																																									<li>
+																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
+																																																																																																																																																																																																																									</li>
+																																																																																																																																																																																																																									<li>
+																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
+																																																																																																																																																																																																																									</li> #}
 						</ul>
 					</div>
 				</div>
